# time-in-transit

./: .gitignore  ASSET_LICENSES.md  Makefile  README.md  baseball.html  eslint.config.js  ideas.md  index.html  lefthook.yaml  lefthook.yml  package-lock.json  package.json  vite.config.ts
engine/: Cargo.toml  build.rs
engine/content-types/src/: lib.rs
engine/content/events/asteroid_base/: cartographers_wake_collector.yaml  cartographers_wake_finale.yaml  cartographers_wake_intro.yaml  cartographers_wake_workshop.yaml  harvest_scar_daughter_house.yaml
engine/content/events/dyson_landing/: shell_access_waystation.yaml  weather_lattice_alert.yaml
engine/content/events/landing/: acquisition_proposal.yaml  alien_graveloom_tithe.yaml  alien_lattice_hive_broker.yaml  alien_orrery_reliquary_audit.yaml  citadel_bastion_writ.yaml  dead_drop_message.yaml  docking_inspection.yaml  harvest_scar_initial.yaml  harvest_scar_return.yaml  museum_of_ancients.yaml  refinery_spindle_vapor_levy.yaml  (+3 more)
engine/src/: api_events.rs  api_flight.rs  api_init.rs  api_query.rs  api_state.rs  api_station.rs  api_trading.rs  civilization.rs  climate.rs  cluster_generator.rs  content.rs  dyson_generator.rs  events.rs  factions.rs  lib.rs  noise.rs  prng.rs  simulation.rs  star_properties.rs  station_archetypes.rs  system_generator.rs  system_payload.rs  system_profiles.rs  topopolis_generator.rs  trading.rs  types.rs  world_interaction_field.rs
engine/src/types/: civilization.rs  constants.rs  crew.rs  mod.rs  player.rs  ship_stats.rs  wasm.rs  world.rs
engine/tests/: helpers.rs
(+220 files in other folders)
