[package]
name = "time-in-transit-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[build-dependencies]
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_yaml = "0.9"

[profile.release]
opt-level = "s"
lto = true
