[workspace]
members = [".", "content-types"]

[package]
name = "time-in-transit-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
content-types = { path = "content-types" }
bincode = { version = "2", features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
content-types = { path = "content-types" }
bincode = { version = "2", features = ["serde"] }

[features]
dev-placement = []

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_yaml = "0.9"
bincode = { version = "2", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
